カレンダー周りの機能追加

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -7,6 +7,7 @@
     "Email": "メールアドレス",
     "E-Mail Address": "メールアドレス",
     "Email Address": "メールアドレス",
+    "UserID": "ユーザーID",
     "Password": "パスワード",
     "Current Password": "現在のパスワード",
     "New Password": "新しいパスワード",
