商品登録の変更

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -40,6 +40,8 @@
     "phone": "電話番号",
     "Edit profile": "登録情報変更",
     "Guide message": "店舗案内",
+    "service entry": "サービス登録",
+    "service edit": "サービス編集",
     "Permanently delete your account.": "アカウントを完全に削除",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "アカウントを削除すると、全てのデータとファイルも完全に削除されます。アカウントを削除する前に必要なデータがあれば事前にダウンロードの実施をお願いします。",
     "Are you sure you want to delete your account?": "アカウントを削除して本当に大丈夫ですか？",
@@ -60,6 +62,7 @@
     "Shop Calender": "営業カレンダー",
     "Dashboard": "管理画面",
     "New Resavation Entry": "新規予約登録",
+    "Confirm Resavation Entry": "予約内容の確認",
     "Resavation List": "予約リスト",
     "Resavation Edit": "予約情報変更",
     "Resavation search": "予約情報検索",
