オプション商品の登録処理を追加

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -7,6 +7,7 @@
     "Email": "メールアドレス",
     "E-Mail Address": "メールアドレス",
     "Email Address": "メールアドレス",
+    "home URL": "ＵＲＬ",
     "UserID": "ユーザーID",
     "Password": "パスワード",
     "Current Password": "現在のパスワード",
@@ -30,6 +31,22 @@
     "You're logged in!": "ログインしました",
     "You are logged in!": "ログインしました",
     "Reset Password": "パスワードのリセット",
+    "product name": "商品名",
+    "business start date": "営業開始日",
+    "business end date": "営業終了日",
+    "start time": "開始時刻",
+    "end time": "終了時刻",
+    "capacity": "定員",
+    "price": "料金",
+    "accessory name": "オプション商品",
+    "new accessory": "オプション商品登録",
+    "additional name": "その他料金名",
+    "additional price": "その他料金",
+    "reservation type": "予約タイプ",
+    "payment method": "支払方法",
+    "memo": "メモ",
+    "weekday price": "平日料金",    
+    "weekend price": "休日料金",
     "Create": "作成",
     "Shop name": "店舗名",
     "(KANA)": "(カナ)",
@@ -38,7 +55,15 @@
     "municipality": "市町村",
     "village": "地区・番地",
     "phone": "電話番号",
+    "WaysPay": "支払方法",
+    "MessageText": "連絡事項",
     "Edit profile": "登録情報変更",
+    "new product": "商品登録",
+    "Reserve date": "予約日",
+    "Reserve count": "予約人数",
+    "Reserve type": "予約タイプ",
+    "Reserve list": "予約一覧",
+    "Reserve show": "予約内容",
     "Guide message": "店舗案内",
     "service entry": "サービス登録",
     "service edit": "サービス編集",
@@ -57,8 +82,10 @@
     "Send Password Reset Link": "パスワードリセットメールを送信",
     "This is a secure area of the application. Please confirm your password before continuing.": "認証が必要なページです。パスワードを入力して確認ボタンをクリックしてください",
     "Confirm": "確認",
+    "IsEnabled": "有効／無効",
     "New Shop Entry": "店舗新規登録",
     "Confirm Shop Entry": "店舗登録確認",
+    "reserve Today": "本日の予約",
     "Shop Calender": "営業カレンダー",
     "Dashboard": "管理画面",
     "New Resavation Entry": "新規予約登録",
@@ -67,6 +94,15 @@
     "Resavation Edit": "予約情報変更",
     "Resavation search": "予約情報検索",
     "Resavation guide": "予約案内",
+    "Resarve date": "予約日",
+    "Resarve count": "予約人数",
+    "Resarve type": "予約タイプ",
+    "Name Kanji": "氏名（漢字）",
+    "Name Kana": "氏名（カナ）",
+    "Address Zip": "郵便番号",
+    "Address Pref": "県名",
+    "Address City": "市町村名",
+    "Address Other": "地域名",
     "Manage Team": "チーム管理",
     "Team Settings": "チーム設定",
     "Create New Team": "新規チーム作成",
