カレンダー表示に祭日名を追加

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -10,9 +10,10 @@
     "home URL": "ＵＲＬ",
     "UserID": "ユーザーID",
     "Password": "パスワード",
+    "password": "パスワード",
     "Current Password": "現在のパスワード",
     "New Password": "新しいパスワード",
-    "Confirm Password": "パスワードを再入力",
+    "Confirm Password": "パスワード再入力",
     "Please confirm your password before continuing.": "続けるにはパスワードを確認してください",
     "Update Password": "パスワードの更新",
     "Ensure your account is using a long, random password to stay secure.": "十分に長くランダムなパスワードを使用して、アカウントのセキュリティを高めましょう",
@@ -45,6 +46,7 @@
     "reservation type": "予約タイプ",
     "payment method": "支払方法",
     "memo": "メモ",
+    "notifications": "連絡事項",
     "weekday price": "平日料金",    
     "weekend price": "休日料金",
     "Create": "作成",
