コンポーネント<x-r-text-area を　<x-rTextareaに変更

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -46,11 +46,13 @@
     "reservation type": "予約タイプ",
     "payment method": "支払方法",
     "memo": "メモ",
+    "guide": "案内",
     "notifications": "連絡事項",
     "weekday price": "平日料金",    
     "weekend price": "休日料金",
     "Create": "作成",
     "Shop name": "店舗名",
+    "Shop guide": "店舗名",
     "(KANA)": "(カナ)",
     "postal code": "郵便番号",
     "province": "都道府県",
