予約受付のEMail送信修正 IFrame内から画面が呼び出された場合はトップのイメージを表示しないこととした

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -7,6 +7,7 @@
     "Email": "メールアドレス",
     "E-Mail Address": "メールアドレス",
     "Email Address": "メールアドレス",
+    "request error": "リクエスト　エラー",
     "home URL": "ＵＲＬ",
     "UserID": "ユーザーID",
     "Password": "パスワード",
