iframe内で表示されたらタイトルを非表示とした カレンダーの日内のレイアウト修正

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -45,6 +45,7 @@
     "additional name": "その他料金名",
     "additional price": "その他料金",
     "reservation type": "予約タイプ",
+    "reservation search": "予約検索",
     "payment method": "支払方法",
     "memo": "メモ",
     "guide": "案内",
